[gd_scene load_steps=2 format=3 uid="uid://v3yvpt55jh3n"]

[ext_resource type="Script" path="res://components/graph nodes/complex values/prompt_template.gd" id="1_32c08"]

[node name="PromptTemplate" type="GraphNode"]
title = "Prompt Template"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_32c08")

[node name="SlotContainer0" type="HBoxContainer" parent="."]
layout_direction = 3
layout_mode = 2

[node name="Label" type="Label" parent="SlotContainer0"]
layout_mode = 2
size_flags_horizontal = 8
text = "Template"

[node name="SystemTemplateRow" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="SystemTemplateRow"]
layout_mode = 2
text = "System Template: "

[node name="SystemTemplateEditor" type="CodeEdit" parent="SystemTemplateRow"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="UserTemplateRow" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="UserTemplateRow"]
layout_mode = 2
text = "User Template: "

[node name="UserTemplateEditor" type="CodeEdit" parent="UserTemplateRow"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[connection signal="text_changed" from="SystemTemplateRow/SystemTemplateEditor" to="." method="system_message_changed"]
[connection signal="text_changed" from="UserTemplateRow/UserTemplateEditor" to="." method="user_message_changed"]
